missed the todo on the depends_on

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "5175:80"
     depends_on:
-      - backend
+      - backend-todo
     networks:
       - app-network
 
