--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,35 @@
-# Dockerfile
-FROM python:3.12-slim-bookworm
+# Use official Python base image
+FROM python:3.11-slim
 
-RUN apt-get update && apt-get install -y \
-    libpq-dev \
+# Set environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    DJANGO_ENV=production
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /code
+# Create and set working directory
+WORKDIR /app
 
-WORKDIR /code
+# Install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY requirements.txt /code/
-RUN pip install -r requirements.txt
+# Copy project files
+COPY . .
 
-COPY . /code
+# Collect static files
+RUN python manage.py collectstatic --noinput
 
-RUN chmod +x /code/entrypoint.sh
+# Make entrypoint executable
+RUN chmod +x entrypoint.sh
+
+# Expose port
+EXPOSE 8000
+
+# Run application
+CMD ["./entrypoint.sh"]
