--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     location / {
         root /usr/share/nginx/html;
@@ -8,12 +8,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-        set $backend_host backend;
-        resolver 127.0.0.11 valid=10s; 
-        proxy_pass http://$backend_host:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
