--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@fontsource/poppins": "^5.2.6",
+    "@fontsource/victor-mono": "^5.2.6",
     "@tanstack/router-plugin": "^1.128.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
